k8s/ing.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silly-demo
  labels:
    app.kubernetes.io/name: silly-demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    alb.ingress.kubernetes.io/scheme: internet-facing                                                                                                                                                                                                         │
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: silly-demo
            port:
              number: 8080
